# tspp-compiler

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeTests.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build.output  build.sh  cmake_install.cmake  compile_commands.json  debug.sh  go_builtins_test_results.md  go_stdlib_implementation_results.md  lexer_diff_with_master.patch  lsan.supp  perf.data  perf.data.old  perf.folded  perf_report.txt  repl_input.tspp  run_tests.sh  simple_test.tspp  simple_test.tspp.ll  test.sh  test_basic.tspp  tspp_interpreter
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
bench/: generate_all_benchmarks.sh
benchmark/: allocloop.tspp  arraysum.tspp  results.csv  results.txt  run_benchmarks.sh  run_intinc_perf.sh  startup.tspp
benchmark/cpp/: allocloop.cpp  arraysum.cpp  emptyloop.cpp  funccall.cpp  intinc.cpp  stringcat.cpp
benchmark/node/: allocloop.js  arraysum.js  emptyloop.js  funccall.js  intinc.js  startup.js  stringcat.js
benchmark/output/: merged_results.csv  results_cpp.csv  results_node.csv  results_py.csv  results_tspp.csv
benchmark/python/: allocloop.py  arraysum.py  emptyloop.py  funccall.py  intinc.py  stringcat.py
docs/: FFI_SYSCALLS.md  MISSING_FEATURES_REPORT.md  architecture.md  dev-setup.md  go_utilities_overview.md  grammar.md  language_spec.md  pipeline.md  todo.ebnf  todo.md  tokens.md
docs/diagrams/: grammar-deps.md  grammar-deps.mmd
examples/: README.md  comprehensive_ffi_demo.tspp  console_demo.tspp  functions.tspp  hello_world.tspp  syscall_demo.tspp  system.tspp  test_system.tspp  variables.tspp  verify_imports.tspp
examples/import_test/: README.md  constants.tspp  main.tspp  math.tspp
examples/stdlib/: README.md  console.tspp  io.tspp  memory.tspp
lib/: system.tspp
scripts/: install_deps_arch.sh  install_deps_fedora.sh  install_deps_macos.sh  install_deps_ubuntu.sh  setup_env.sh
src/: CMakeLists.txt  main.cpp
src/ast/: ASTBuilder.h  ASTMacros.h  ASTPrinter.h  ASTTypes.h  ast.cpp  ast.h  ast_test.cpp
src/ast/printers/: ASTPrinterDecl.h  ASTPrinterExpr.h  ASTPrinterStmt.h  ASTPrinterType.h  ASTPrinterUtils.h
src/codegen/: ConstantExpressionEvaluator.cpp  ConstantExpressionEvaluator.h  LLVMCodeGenerator.cpp  LLVMCodeGenerator.h
src/common/: DebugLog.cpp  DebugLog.h  Error.cpp  Error.h  Location.cpp  Location.h  common.cpp  common.h
src/core/common/: common_types.h  macros.h
src/core/diagnostics/: error_reporter.cpp  error_reporter.h
src/core/syscall/: syscall_c_bindings.h  syscall_wrapper.cpp  syscall_wrapper.h
src/core/utils/: ast_printer.h  file_utils.cpp  file_utils.h  log_utils.cpp  log_utils.h  string_utils.cpp  string_utils.h
src/interpreter/: JITInterpreter.cpp  interpreter.cpp  interpreter.h
src/lexer/: Lexer.cpp  Lexer.h  lexer.cpp  lexer.h
src/lexer/patterns/: lexer_patterns.h  token_maps.h
src/lexer/scanner/: token_scanner.cpp  token_scanner.h
src/lexer/scanner/base/: scanner_base.cpp  scanner_base.h
src/lexer/scanner/specialized/: identifier_scanner.cpp  identifier_scanner.h  number_scanner.cpp  number_scanner.h  operator_scanner.cpp  operator_scanner.h  string_scanner.cpp  string_scanner.h
src/lexer/state/: lexer_state.cpp  lexer_state.h
src/parser/: parser.cpp  parser.h
src/parser/module/: ModuleResolver.cpp  ModuleResolver.h
src/parser/nodes/: ast_visitor.h  base_node.h  declaration_nodes.h  expression_nodes.h  meta_nodes.h  misc_nodes.h  statement_nodes.h  statement_sequence_node.h  type_nodes.h
src/parser/visitors/: base_visitor.h
src/parser/visitors/ast_builder/: ast_builder_visitor.cpp  ast_builder_visitor.h
src/parser/visitors/ast_builder/ast_builders/: DeclarationBuilder.cpp  DeclarationBuilder.h  DeclarationBuilder_complex.cpp  ExpressionBuilder.cpp  ExpressionBuilder.h  ExpressionBuilder_complex.cpp  StatementBuilder.cpp  StatementBuilder.h  StatementBuilder_complex.cpp  TypeBuilder.cpp  TypeBuilder.h  TypeBuilder_complex.cpp
src/parser/visitors/semantic/: SemanticAnalyzerVisitor.cpp  SemanticAnalyzerVisitor.h  SemanticScope.cpp  SemanticScope.h  Symbol.h
src/repl/: repl.cpp  repl.h
src/tests/: test_script.sh
src/tokens/: Token.cpp  Token.h  TokenFactory.cpp  TokenFactory.h  TokenType.h  TokenUtils.cpp  TokenUtils.h  token.cpp  token_type.h  tokens.h
src/tokens/stream/: token_stream.cpp  token_stream.h
src/types/: types.cpp  types.h
tests/: README.md  advanced_typedef_test.tspp.ll  basic_pointers_simple.tspp.ll  basic_pointers_working.tspp.ll  benchmark.tspp  classes_interface.test.tspp  classes_interface.test.tspp.ll  complex_parentheses_test.tspp.ll  console_impl_in_tspp.tspp  emptyloop.tspp  extern_syscall_test.tspp  final.tspp  final.tspp.ll  final_typedef_test.tspp.ll  funccall.tspp  global_vars_test.tspp.ll  go_builtins_demo  go_builtins_integration_demo.cpp  go_builtins_test  go_builtins_test.cpp  go_panic_test  go_panic_test.cpp  go_stdlib_test.cpp  if_else_test.tspp.ll  interfaces_statements_expressions.test.tspp  interfaces_statements_expressions.test.tspp.ll  intinc.tspp  intinc_fastpath.test.tspp  local_tcp_echo.py  memory_types_test.tspp.ll  native_entry_test.tspp  pointer_syntax_test.tspp.ll  program_structure_sample.tspp.ll  run_native_entry_test.sh  run_network_test.sh  sample.functions.test.tspp  sample.functions.test.tspp.ll  sample.test.tspp  sample.test.tspp.ll  sample.variable.test.tspp  (+16 more)
tests/classes/: class_access_and_implements_test.tspp.ll  class_constructor_access_test.tspp.ll  class_field_types_test.tspp.ll  class_fields_only_test.tspp.ll  class_getters_setters_test.tspp.ll  class_inheritance_test.tspp.ll  class_instantiation_test.tspp.ll  class_static_members_test.tspp.ll  class_virtual_override_test.tspp.ll  class_with_methods_test.tspp.ll  interface_ts_like_test.tspp.ll
tests/expressions/: README.md  arithmetic_parentheses_test.tspp.ll  complex_parentheses_test.tspp.ll  (+4 more)
tools/: generate_accept.sh  install_gc.sh
(+41 files in other folders)
